0.12.6dev: fixed not wrapping the text inside ticket description textarea in IE 11 (fixed #11376)
git-svn-id: http://trac.edgewall.org/intertrac/log:/branches/0.12-stable@12334 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/htdocs/css/trac.css
+++ b/trac/htdocs/css/trac.css
@@ -68,6 +68,8 @@ span:hover .anchor {
 
 /* Forms */
 input, textarea, select { margin: 2px }
+/* Avoid to inherit white-space of its parent element for IE 11, #11376 */
+textarea { white-space: pre-wrap }
 input, select { vertical-align: middle }
 input[type=button], input[type=submit], input[type=reset] {
  background: #eee;
